{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 12,
  "lineage": "0463351a-bebb-2a6f-5171-528612804eaa",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "acs_demo_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkSecurityGroups/acs-tf-demo-nsg",
            "location": "southeastasia",
            "name": "acs-tf-demo-nsg",
            "resource_group_name": "acs-tf-demo",
            "security_rule": [],
            "tags": {
              "env": "demo",
              "owner": "Ritesh"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "acs_demo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/virtualNetworks/acs-tf-demo-vnet/subnets/acs-tf-demo-subnet1",
            "name": "acs-tf-demo-subnet1",
            "network_security_group_id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkSecurityGroups/acs-tf-demo-nsg",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "acs-tf-demo",
            "virtual_network_name": "acs-tf-demo-vnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "acs_demo_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/20"
            ],
            "guid": "544243ac-e44f-47c5-90ac-d7c69bd46e2f",
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/virtualNetworks/acs-tf-demo-vnet",
            "location": "southeastasia",
            "name": "acs-tf-demo-vnet",
            "resource_group_name": "acs-tf-demo",
            "subnets": [
              "acs-tf-demo-subnet1",
              "acs-tf-demo-subnet2"
            ],
            "tags": {
              "env": "demo",
              "owner": "Ritesh"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "acs_tf_demo_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkInterfaces/win-vm-iis-ferret-nic",
            "internal_domain_name_suffix": "vrbuevcp2tcupefm05djxvdofh.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/publicIPAddresses/win-vm-iis-ferret-public-ip",
                "subnet_id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/virtualNetworks/acs-tf-demo-vnet/subnets/acs-tf-demo-subnet1"
              }
            ],
            "location": "southeastasia",
            "name": "win-vm-iis-ferret-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "acs-tf-demo"
          },
          "dependencies": [
            "azurerm_public_ip.acs_tf_demo_public_ip",
            "data.azurerm_resource_group.acs_demo_rg",
            "data.azurerm_subnet.acs_demo_subnet",
            "data.azurerm_virtual_network.acs_demo_vnet",
            "random_pet.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "acs_tf_demo_nic_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkInterfaces/win-vm-iis-ferret-nic|/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkSecurityGroups/acs-tf-demo-nsg",
            "network_interface_id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkInterfaces/win-vm-iis-ferret-nic",
            "network_security_group_id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkSecurityGroups/acs-tf-demo-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.acs_tf_demo_nic",
            "azurerm_public_ip.acs_tf_demo_public_ip",
            "data.azurerm_network_security_group.acs_demo_nsg",
            "data.azurerm_resource_group.acs_demo_rg",
            "data.azurerm_subnet.acs_demo_subnet",
            "data.azurerm_virtual_network.acs_demo_vnet",
            "random_pet.prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "acs_demo_rdp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkSecurityGroups/acs-tf-demo-nsg/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "acs-tf-demo-nsg",
            "priority": 1000,
            "protocol": "*",
            "resource_group_name": "acs-tf-demo",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_network_security_group.acs_demo_nsg",
            "data.azurerm_resource_group.acs_demo_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "acs_demo_web_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/networkSecurityGroups/acs-tf-demo-nsg/securityRules/web",
            "name": "web",
            "network_security_group_name": "acs-tf-demo-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "acs-tf-demo",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_network_security_group.acs_demo_nsg",
            "data.azurerm_resource_group.acs_demo_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "acs_tf_demo_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/78506f2d-32b3-4404-909a-02d41d22092b/resourceGroups/acs-tf-demo/providers/Microsoft.Network/publicIPAddresses/win-vm-iis-ferret-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "win-vm-iis-ferret-public-ip",
            "resource_group_name": "acs-tf-demo",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.acs_demo_rg",
            "random_pet.prefix"
          ]
        }
      ]
    }
  ]
}